# traiding

./: README.md
docs/: TradingBot_ML_Ideas.txt  adaptive_crypto_market_states.md
docs/archive/: PROJECT_STRATEGY_AND_IMPROVEMENTS.txt
kraken swing-arbitrage/: kraken_arbitrage_and_swing_plan.md
ml-trading-bot-extended-competition/ml-trading-bot/: .gitignore  README.md  ROADMAP.md  config.yaml  docker-compose.yml
ml-trading-bot-extended-competition/ml-trading-bot/api/: main.py
ml-trading-bot-extended-competition/ml-trading-bot/src/backtest/: metrics_exec.py  stress_exec.py
ml-trading-bot-extended-competition/ml-trading-bot/src/exec/: hyperliquid_client.py
ml-trading-bot-extended-competition/ml-trading-bot/src/orchestration/: run.py  service.py
ml-trading-bot-extended-competition/ml-trading-bot/src/policy/: impact_model.py  (+2 more)
ml-trading-bot-extended-competition/ml-trading-bot/ui/: dashboard.py
ml-trading-bot-hyperliquid-gui/ml-trading-bot/: .env.example  pyproject.toml  requirements.txt
ml-trading-bot-hyperliquid-gui/ml-trading-bot/monitoring/: prometheus.yml
ml-trading-bot-hyperliquid-gui/ml-trading-bot/ui/: dashboard.py
ml-trading-bot-scaffold/ml-trading-bot/: README.md  config.yaml  pyproject.toml  requirements.txt
scripts/: Kraken_Liquid_USDC_Pairs.ipynb  Kraken_Top3_Liquid_USDC_Pairs.ipynb  Kraken_USDC_RealVolume_Screene.ipynb  USDC Top 10 Dynamic Trend Entry.ipynb
stable coins scalping/: arbitrage_bot_roadmap.md  defi_attack_analysis_plan_new.md
swing/: swing_strategy_plan.md
swing/hyperliquid/: trading_bot_plan (1).md  trading_bot_plan.md
(+3 files in other folders)
